# MineDock

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  RELAY.md  design-qa.md  index.html  package-lock.json  package.json  tailwind.config.js
plans/: 001-finish-core-ux-workflows.md  002-ai-server-setup-assistant.md  README.md
src/: App.css  App.tsx  main.tsx  store.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  backups.rs  commands.rs  database.rs  discord.rs  downloader.rs  files.rs  lib.rs  logo.txt  main.rs  models.rs  paths.rs  plugins.rs  process.rs  scheduler.rs  tunnel.rs  worlds.rs
src/components/: AppRoutes.tsx  Button.tsx  CommandPalette.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorState.tsx  FieldError.tsx  GuidedTour.tsx  LoadingState.tsx  Notifications.tsx  PageHeader.tsx  PluginDownloads.tsx  ProgressHub.tsx  SafeApplyModal.tsx  UnsavedChangesBar.tsx  WindowState.tsx
src/hooks/: useUnsavedGuard.ts
src/lib/: navigationGuard.ts  safeApply.ts  software.ts
src/pages/: Additions.tsx  Assistant.tsx  Backups.tsx  Console.tsx  Files.tsx  Health.tsx  Logs.tsx  Overview.tsx  Players.tsx  Properties.tsx  ScheduleEditor.tsx  Schedules.tsx  Servers.tsx  Settings.tsx  Versions.tsx  Wizard.tsx  Worlds.tsx
src/types/: index.ts
tunnel-relay/: build.ps1  build.sh
tunnel-relay/src/main/java/com/minedock/relay/: Main.java
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  styles.css
