[package]
name = "minedock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minedock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
sysinfo = "0.38.4"
zip = "8.6.0"
walkdir = "2.5.0"
flate2 = "1"
chrono = "0.4.45"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-os = "2.3.2"
futures = "0.3"
async-trait = "0.1.89"
rusqlite = { version = "0.31.0", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
discord-rich-presence = "0.2.4"
aws-config = "1"
aws-sdk-bedrockruntime = "1"
aws-credential-types = "1"
base64 = "0.22"
